--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Install dependencies
         run: npm ci --prefer-offline
 
-      - name: Lint commit message
-        run: npx commitlint --from=HEAD~1
+      # - name: Lint commit message
+      #   run: npx commitlint --from=HEAD~1
 
       - name: Run ESLint
         run: npm run lint
