--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A template for building Phaser RPG games.",
   "author": "Mark <mark@remarkablemark.org>",
   "scripts": {
-    "build": "npm run clean && vite build",
+    "build": "vite build",
     "bundle": "scripts/bundle.sh",
     "clean": "rm -rf dist",
     "lint": "eslint .",
