--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "prettier": "3.4.2",
     "typescript": "5.7.3",
     "vite": "6.0.11",
-    "vite-plugin-html": "3.2.2"
+    "vite-plugin-html": "3.2.2",
+    "axios": "1.7.9"
   },
   "private": true,
   "license": "MIT"
