--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://remarkablegames.org/phaser-rpg/",
   "dependencies": {
+    "pathfinding": "0.4.18",
     "phaser": "3.87.0",
     "phaser-jsx": "0.13.6"
   },
@@ -27,9 +28,11 @@
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.19.0",
     "@types/gtag.js": "0.0.20",
+    "@types/pathfinding": "^0.0.9",
     "@types/react": "19.0.8",
     "@typescript-eslint/eslint-plugin": "8.22.0",
     "@typescript-eslint/parser": "8.22.0",
+    "axios": "1.7.9",
     "eslint": "9.19.0",
     "eslint-plugin-prettier": "5.2.3",
     "eslint-plugin-simple-import-sort": "12.1.1",
@@ -38,8 +41,7 @@
     "prettier": "3.4.2",
     "typescript": "5.7.3",
     "vite": "6.0.11",
-    "vite-plugin-html": "3.2.2",
-    "axios": "1.7.9"
+    "vite-plugin-html": "3.2.2"
   },
   "private": true,
   "license": "MIT"
