--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://remarkablegames.org/phaser-rpg/",
   "dependencies": {
+    "@langchain/core": "^0.3.42",
+    "@langchain/langgraph": "^0.2.55",
+    "openai": "^4.87.3",
     "pathfinding": "0.4.18",
     "phaser": "3.87.0",
     "phaser-jsx": "0.13.6"
