--- a/package.json
+++ b/package.json
@@ -1,47 +1,56 @@
 {
-    "name": "template-react-ts",
-    "description": "A Phaser 3 TypeScript project template that demonstrates React communication and uses Vite for bundling.",
-    "version": "1.0.3",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/phaserjs/template-react-ts.git"
-    },
-    "author": "Phaser Studio <support@phaser.io> (https://phaser.io/)",
-    "license": "MIT",
-    "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
-    "bugs": {
-        "url": "https://github.com/phaserjs/template-react-ts/issues"
-    },
-    "homepage": "https://github.com/phaserjs/template-react-ts#readme",
-    "keywords": [
-        "phaser",
-        "phaser3",
-        "react",
-        "vite",
-        "typescript"
-    ],
+    "name": "phaser-rpg",
+    "version": "1.0.0-alpha",
+    "description": "A template for building Phaser RPG games.",
+    "author": "Mark <mark@remarkablemark.org>",
+    "type": "module",
     "scripts": {
-        "dev": "node log.js dev & vite --config vite/config.dev.mjs",
-        "build": "node log.js build & vite build --config vite/config.prod.mjs",
-        "dev-nolog": "vite --config vite/config.dev.mjs",
-        "build-nolog": "vite build --config vite/config.prod.mjs"
+        "build": "vite build",
+        "bundle": "scripts/bundle.sh",
+        "clean": "rm -rf dist",
+        "lint": "eslint .",
+        "lint:fix": "npm run lint -- --fix",
+        "lint:tsc": "tsc --noEmit",
+        "prepare": "husky",
+        "preview": "vite preview",
+        "start": "vite --open"
     },
+    "homepage": "https://remarkablegames.org/phaser-rpg/",
     "dependencies": {
-        "phaser": "^3.88.2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "@langchain/core": "^0.3.42",
+        "@langchain/langgraph": "^0.2.55",
+        "@langchain/openai": "^0.4.4",
+        "@types/react-dom": "^19.0.4",
+        "openai": "^4.87.3",
+        "pathfinding": "0.4.18",
+        "phaser": "3.87.0",
+        "phaser-jsx": "0.13.6",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-draggable": "^4.4.6"
     },
     "devDependencies": {
-        "@types/react": "^18.3.3",
-        "@types/react-dom": "^18.3.0",
-        "@typescript-eslint/eslint-plugin": "^7.13.1",
-        "@typescript-eslint/parser": "^7.13.1",
-        "@vitejs/plugin-react": "^4.3.1",
-        "eslint": "^8.57.0",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-react-refresh": "^0.4.7",
-        "terser": "^5.28.1",
-        "typescript": "^5.2.2",
-        "vite": "^5.3.1"
-    }
+        "@commitlint/cli": "19.6.1",
+        "@commitlint/config-conventional": "19.6.0",
+        "@eslint/compat": "1.2.5",
+        "@eslint/eslintrc": "3.2.0",
+        "@eslint/js": "9.19.0",
+        "@types/gtag.js": "0.0.20",
+        "@types/pathfinding": "^0.0.9",
+        "@types/react": "^19.0.10",
+        "@typescript-eslint/eslint-plugin": "8.22.0",
+        "@typescript-eslint/parser": "8.22.0",
+        "axios": "1.7.9",
+        "eslint": "9.19.0",
+        "eslint-plugin-prettier": "5.2.3",
+        "eslint-plugin-simple-import-sort": "12.1.1",
+        "husky": "9.1.7",
+        "lint-staged": "15.4.3",
+        "prettier": "3.4.2",
+        "typescript": "5.7.3",
+        "vite": "6.0.11",
+        "vite-plugin-html": "3.2.2"
+    },
+    "private": true,
+    "license": "MIT"
 }
