--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "@langchain/langgraph": "^0.2.55",
         "@langchain/openai": "^0.4.4",
         "@types/react-dom": "^19.0.4",
-        "openai": "^4.87.3",
+        "marked": "^15.0.7",
+        "openai": "^4.90.0",
         "pathfinding": "0.4.18",
         "phaser": "3.87.0",
         "phaser-jsx": "0.13.6",
