--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@langchain/langgraph": "^0.2.55",
         "@langchain/openai": "^0.4.4",
         "@types/react-dom": "^19.0.4",
+        "d3": "^7.9.0",
         "marked": "^15.0.7",
         "openai": "^4.90.0",
         "pathfinding": "0.4.18",
@@ -36,6 +37,7 @@
         "@eslint/compat": "1.2.5",
         "@eslint/eslintrc": "3.2.0",
         "@eslint/js": "9.19.0",
+        "@types/d3": "^7.4.3",
         "@types/gtag.js": "0.0.20",
         "@types/pathfinding": "^0.0.9",
         "@types/react": "^19.0.10",
