--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@eslint/js": "9.19.0",
         "@types/d3": "^7.4.3",
         "@types/gtag.js": "0.0.20",
+        "@types/papaparse": "^5.3.15",
         "@types/pathfinding": "^0.0.9",
         "@types/react": "^19.0.10",
         "@typescript-eslint/eslint-plugin": "8.22.0",
